testsuite/tests/interpreter_errors/combine_to_invalid_type/test.out
error: Unsupported operation: Str & Int
script.lkql:2:7 in script.lkql
  2 | print("a".combine(2))
    |       ^^^^^^^^^^^^^^
